[package]
name = "ribbit"
version = "0.1.0"
authors = ["gweej <iamgweej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.8", features=["winnt", "memoryapi", "errhandlingapi", "processthreadsapi", "synchapi", "winbase"]}
clap = "2.32"
hex = "0.4.2"